--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "llm-docs"
-version = "0.1"
+version = "0.1a0"
 description = "Ask questions of LLM documentation using LLM"
 readme = "README.md"
 authors = [{name = "Simon Willison"}]
