--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "llm-docs"
-version = "0.1a0"
+version = "0.1"
 description = "Ask questions of LLM documentation using LLM"
 readme = "README.md"
 authors = [{name = "Simon Willison"}]
@@ -10,7 +10,7 @@ classifiers = [
 ]
 requires-python = ">=3.9"
 dependencies = [
-    "llm>=0.24a1"
+    "llm>=0.24"
 ]
 
 [build-system]
